--- a/app/views/irm/permissions/get_data.html.erb
+++ b/app/views/irm/permissions/get_data.html.erb
@@ -7,12 +7,12 @@
     <% end %>
     <% builder.column(:product_module_name,{:title=>t(:label_irm_permission_product_name),:searchable=>true})%>
     <% builder.column(:code,{:title=>t(:code),:searchable=>true})%>
-    <% builder.column(:p_controller,{:title=>t(:label_irm_permission_page_controller),:searchable=>true})%>
+    <% builder.column(:p_controller,{:title=>t(:label_irm_permission_page_controller),:searchable=>true,:sortable=>true})%>
     <% builder.column(:p_action,{:title=>t(:label_irm_permission_page_action),:searchable=>true})%>
     <% builder.column(:params_count,{:title=>t(:label_irm_permission_param_count), :width => "40px"})%>
     <% builder.column(:direct_get_flag,{:title=>t(:label_irm_permission_direct_get_flag), :width => "40px"}) do |data|%>
-          <%= check_img(data[:direct_get_flag]) %>
-        <% end %>
+      <%= check_img(data[:direct_get_flag]) %>
+    <% end %>
     <% builder.column(:status_code,{:title=>t(:label_irm_permission_status_code), :width => "40px"}) do |data|%>
       <%= check_img(data[:status_code]) %>
     <% end %>
