--- a/app/views/irm/wf_rule_time_triggers/_new_form.html.erb
+++ b/app/views/irm/wf_rule_time_triggers/_new_form.html.erb
@@ -1,67 +1,76 @@
-<style type="text/css">
-  div.trigger{
-      float:left;
-  }
-</style>
-<%= form_for(@wf_rule_time_trigger,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
-    <%= f.hidden_field(:rule_id)%>
-    <%= back_url_hidden_field_tag%>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
+<%= form_for(@wf_rule_time_trigger, :url => {:action => "create"}, :builder => CustomFormBuilder) do |f| %>
+
+
+    <% content_for :form_block_a do %>
+        <%= f.hidden_field(:rule_id) %>
+        <table class="form-table">
+          <tbody>
+          <tr>
+            <td class="label-col">
+              <label for="wf_rule_time_trigger_rule"><%= t(:label_irm_wf_rule_time_trigger_rule) %></label></td>
+            <td class="data-col"><label><%= wf_rule_name(@wf_rule_time_trigger.rule_id) %></label></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col">&nbsp;</td>
+            <td class="data-3col" colspan="3">
+              <div class="form-inline">
+                <%= f.text_field :time_lead, :size => 5, :required => true %>
+                <%= f.select :time_unit, available_wf_trigger_time_unit %>
+                <%= f.select :trigger_mode, available_wf_trigger_time_mode %>
+                <%= f.select :trigger_data_object, available_wf_trigger_date_attribute(@wf_rule_time_trigger.rule_id) %>
+              </div>
+
+            </td>
+          </tr>
+          </tbody>
+        </table>
+    <% end %>
+
+    <% content_for :form_buttons do %>
+        <%= link_submit t(:save), {:class => "btn btn-primary"} %>
+        <%= link_back t(:cancel), {}, {:class => "btn cancel"} %>
+    <% end %>
+
+
+
+    <!--页面结构-->
+    <div class="page-block">
+      <table class="page-block-header">
         <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_wf_rule_time_trigger_new)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
+          <td class="page-block-title">
+            <h2 class="block-title"><%= t(:label_irm_wf_rule_time_trigger_new) %></h2>
+          </td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons %>
+
           </td>
         </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="pbBody">
-    <%= error_for @wf_rule_time_trigger %>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label for="wf_rule_time_trigger_rule"><%=t(:label_irm_wf_rule_time_trigger_rule)%></label></td>
-              <td class="dataCol"><%=wf_rule_name(@wf_rule_time_trigger.rule_id)%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol">&nbsp;</td>
-              <td class="dataCol" colspan="3" width="82%">
-                <div class="trigger">
-                     <%=f.text_field :time_lead,:size=>5, :required=>true%>
-                </div>
-                <div class="trigger">
-                     <%=f.select :time_unit,available_wf_trigger_time_unit%>
-                </div>
-                <div class="trigger">
-                     <%=f.select :trigger_mode,available_wf_trigger_time_mode%>
-                </div>
-                <div class="trigger">
-                     <%=f.select :trigger_data_object, available_wf_trigger_date_attribute(@wf_rule_time_trigger.rule_id)%>
-                </div>
-              </td>
-            </tr>
-        </tbody>
+      </table>
+      <div class="page-block-body">
+        <%= error_for @wf_rule_time_trigger %>
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <%= form_require_info %>
+            <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_a %>
+          </div>
+        </div>
+
+      </div>
+
+      <table class="page-block-footer">
+        <tr>
+          <td class="page-block-title">
+          </td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons %>
+          </td>
+        </tr>
       </table>
     </div>
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:cancel),back_url_default({:controller=>"irm/wf_rules",:action=>"show",:id=>@wf_rule_time_trigger.rule_id})%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
+
 <% end %>
