--- a/app/views/irm/wf_rules/_edit_form.html.erb
+++ b/app/views/irm/wf_rules/_edit_form.html.erb
@@ -1,103 +1,130 @@
-<%= form_for(@wf_rule,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<%= form_for(@wf_rule,:url=>{:action=>"update"},:builder => CustomFormBuilder) do |f| %>
+
+
+  <% content_for :form_block_a   do%>
+    <table class="form-table">
+      <tbody>
+          <tr>
+            <td class="label-col"><label for="wf_rule_bo_code"><%=t(:label_irm_wf_rule_bo_code)%></label></td>
+            <td class="data-col"><label><%=bo_name(@wf_rule.bo_code)%></label></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label for="wf_rule_code"><%=t(:label_irm_wf_rule_rule_code)%></label></td>
+            <td class="data-col"><label><%=@wf_rule.rule_code%></label></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label for="wf_rule_name"><%=t(:label_irm_wf_rule_name)%></label></td>
+            <td class="data-col"><label><%=f.text_field :name, :required=>true ,:id=>"wf_rule_name"%></label></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+
+          <tr>
+            <td class="label-col"><label for="wf_rule_description"><%=t(:label_irm_wf_rule_description)%></label></td>
+            <td class="data-col"><%=f.text_area :description,:id=>"wf_rule_description",:rows=>3%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+
+      </tbody>
+    </table>
+  <% end %>
+
+  <% content_for :form_block_b   do%>
+    <%=f.hidden_field :evaluate_rule_mode, :value=>"FILTER"%>
+    <table class="form-table">
       <tbody>
         <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_wf_rule_new)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
+          <td class="label-col"><label for="wf_rule_evaluate_criteria_rule"><%=t(:label_irm_wf_rule_evaluate_criteria_rule)%></label></td>
+          <td class="data-3col" colspan="3">
+            <% available_evaluate_criteria_rules.each_with_index do |rule,index| %>
+              <div>
+                <%=f.radio_button :evaluate_criteria_rule, rule[1],{:id=>"evaluate_criteria_rule_#{index}"}%>
+                <label for="evaluate_criteria_rule_<%= index %>"> <%= rule[0] %> </label>
+              </div>
+            <% end %>
           </td>
         </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
-    <%= error_for @wf_rule %>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-        <span class="pbSubExtra">
-          <span class="requiredLegend">
-            <span class="requiredExampleOuter">
-              <span class="requiredExample">&nbsp;</span>
-            </span><span class="requiredMark">*</span>
-            <span class="requiredText"> = <%=t(:label_is_required)%></span>
-          </span>
-        </span>
-        <h3><%= t(:label_common_info) %></h3>
-      </div>
-      <div class="pbSubsection">
-        <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-              <tr>
-                <td class="labelCol"><label for="wf_rule_bo_code"><%=t(:label_irm_wf_rule_bo_code)%></label></td>
-                <td class="dataCol"><%=bo_name(@wf_rule.bo_code)%></td>
-                <td class="labelCol empty">&nbsp;</td>
-                <td class="dataCol empty">&nbsp;</td>
-              </tr>
-              <tr>
-                <td class="labelCol"><label for="wf_rule_code"><%=t(:label_irm_wf_rule_rule_code)%></label></td>
-                <td class="dataCol"><%=@wf_rule.rule_code%></td>
-                <td class="labelCol empty">&nbsp;</td>
-                <td class="dataCol empty">&nbsp;</td>
-              </tr>
-              <tr>
-                <td class="labelCol"><label for="wf_rule_name"><%=t(:label_irm_wf_rule_name)%></label></td>
-                <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"wf_rule_name"%></td>
-                <td class="labelCol empty">&nbsp;</td>
-                <td class="dataCol empty">&nbsp;</td>
-              </tr>
+  <% end %>
 
-              <tr>
-                <td class="labelCol"><label for="wf_rule_description"><%=t(:label_irm_wf_rule_description)%></label></td>
-                <td class="dataCol"><%=f.text_area :description,:id=>"wf_rule_description",:rows=>3%></td>
-                <td class="labelCol empty">&nbsp;</td>
-                <td class="dataCol empty">&nbsp;</td>
-              </tr>
-
-          </tbody>
-        </table>
-      </div>
-      <div id="head_2_ep" class="pbSubheader tertiaryPalette">
-        <h3><%= t(:label_irm_wf_rule_evaluation_criteria) %></h3>
-      </div>
-      <div class="pbSubsection">
-        <%=f.hidden_field :evaluate_rule_mode, :value=>"FILTER"%>
-        <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+  <% content_for :form_block_c   do%>
+        <table class="form-table">
           <tbody>
             <tr>
-              <td class="labelCol"><label for="wf_rule_evaluate_criteria_rule"><%=t(:label_irm_wf_rule_evaluate_criteria_rule)%></label></td>
-              <td class="dataCol" colspan="3" style="width:82%">
-                <% available_evaluate_criteria_rules.each_with_index do |rule,index| %>
-                  <div>
-                    <%=f.radio_button :evaluate_criteria_rule, rule[1],{:id=>"evaluate_criteria_rule_#{index}"}%>
-                    <label for="evaluate_criteria_rule_<%= index %>"> <%= rule[0] %> </label>
-                  </div>
-                <% end %>
+              <td class="label-col"><label><%=t(:label_irm_wf_rule_filter)%></label></td>
+              <td class="data-3col" colspan="3">
+                <%= render "edit_rule_filter" %>
               </td>
             </tr>
           </tbody>
         </table>
+
+  <% end %>
+
+  <% content_for :form_buttons  do %>
+        <%= link_submit t(:save),{:class=>"btn btn-primary"} %>
+        <%= link_back t(:cancel), nil,:class=>"btn" %>
+  <% end %>
+
+
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header"><tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= t(:label_irm_wf_rule_edit) %></h2>
+      </td>
+      <td class="page-block-button">
+        <%= content_for :form_buttons   %>
+
+      </td>
+      <td class="page-block-help">
+      </td>
+    </tr></table>
+    <div class="page-block-body">
+      <%= error_for @wf_rule %>
+      <%= error_for @rule_filter %>
+      <div class="sub-page-block">
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_a   %>
+        </div>
       </div>
-      <div id="head_3_ep" class="pbSubheader tertiaryPalette">
-        <h3><%= t(:label_irm_wf_rule_filter) %></h3>
+      <div class="sub-page-block">
+        <div class="sub-page-block-header">
+          <h3 class="sub-page-block-title"><%= t(:label_irm_wf_rule_evaluation_criteria) %></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_b   %>
+        </div>
       </div>
-      <% if @rule_filter %>
-        <%= render "edit_rule_filter" %>
-      <% end %>
+      <div class="sub-page-block">
+        <div class="sub-page-block-header">
+          <h3 class="sub-page-block-title"><%= t(:label_irm_wf_rule_filter) %></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_c   %>
+        </div>
+      </div>
+    </div>
+
+    <table class="page-block-footer"><tr>
+      <td class="page-block-title">
+      </td>
+      <td class="page-block-button">
+        <%= content_for :form_buttons   %>
+      </td>
+    </tr></table>
   </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
+
 <% end %>
+
