--- a/app/views/irm/wf_rules/_new_step_1.html.erb
+++ b/app/views/irm/wf_rules/_new_step_1.html.erb
@@ -1,60 +1,61 @@
-<%= form_for(@wf_rule,:url=>{:action=>"new", :step => "2"},:builder => LabellingFormBuilder) do |f| %>
-<div  class="wizard-block">
-    <div class="pbWizardTitle tertiaryPalette">
-        <div class="ptRightTitle">
-            <%= t(:step_n_total_m, :n => "1", :m => "2") %>
-        </div>
-        <h2>
-            <%= t(:step_n, :n => "1") %><%= t(:label_irm_wf_rule_select_bo) %>
-        </h2>
-    </div>
-  <div class="pbBody">
-    <div class="pbDescription ">
-    </div>
-    <div class="pbWizardBody">
-      <div class="secondary-palette">
-        <div class="pbBody ">
-            <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-              <span class="pbSubExtra">
-                <span class="requiredLegend">
-                  <span class="requiredExampleOuter">
-                    <span class="requiredExample">&nbsp;</span>
-                  </span><span class="requiredMark">*</span>
-                  <span class="requiredText"> = <%=t(:label_is_required)%></span>
-                </span>
-              </span>
-              <h3><%= t(:label_common_info) %></h3>
-            </div>
-            <div class="pbSubsection">
-            <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                <tbody>
-                  <tr>
-                    <td class="labelCol"><label for="object_attribute_attribute_type"><%=t(:label_irm_wf_rule_bo_code)%></label></td>
-                    <td class="dataCol"><%=f.blank_select :bo_code, available_workflow_business_object%></td>
-                    <td class="labelCol empty">&nbsp;</td>
-                    <td class="dataCol empty">&nbsp;</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
+<%= form_for(@wf_rule,:url=>{:action=>"new"},:builder => CustomFormBuilder) do |f| %>
+
+
+  <% content_for :form_block_a   do%>
+    <%= f.hidden_field(:step) %>
+    <table class="form-table">
+      <tbody>
+        <tr>
+          <td class="label-col"><label for="object_attribute_attribute_type"><%=t(:label_irm_wf_rule_bo_code)%></label></td>
+          <td class="data-col"><%=f.blank_select :bo_code, available_workflow_business_object,:required=>true%></td>
+          <td class="label-col empty">&nbsp;<%= f.hidden_field(:step) %></td>
+          <td class="data-col empty">&nbsp;</td>
+        </tr>
+      </tbody>
+    </table>
+  <% end %>
+
+  <% content_for :form_buttons  do %>
+        <%= link_to t(:next), {:action => "new"},{:class=>"submit btn"} %>
+        <%= link_to t(:cancel), nil,:class=>"btn" %>
+  <% end %>
+
+
+
+    <!--页面结构-->
+    <div class="page-block">
+      <table class="page-block-header"><tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%= t(:step_n, :n => "1") %><%= t(:label_irm_wf_rule_select_bo) %></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+
+        </td>
+        <td class="page-block-help">
+          <h2 class="block-title"><%= t(:step_n_total_m, :n => "1", :m => "2") %></h2>
+        </td>
+      </tr></table>
+      <div class="page-block-body">
+        <%= error_for @wf_rule%>
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <%= form_require_info %>
+            <h3 class="sub-page-block-title"><%= t(:label_irm_report_type_business_object_select) %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_a   %>
+          </div>
         </div>
       </div>
+
+      <table class="page-block-footer"><tr>
+        <td class="page-block-title">
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr></table>
     </div>
-    <div class="pbWizardFooter">
-        <div class="pbBottomButtons">
-            <table cellpadding="0" cellspacing="0" border="0">
-              <tbody>
-                <tr>
-                  <td class="pbTitle"></td>
-                  <td id="bottomButtonRow" class="pbButtonb">
-                    <div class="button"><%= f.submit t :next%></div>
-                    <div class="button"><%= link_to t(:cancel), {:action => "index"} %></div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-        </div>
-    </div>
-  </div>
-</div>
-<%end%>
+
+<% end %>
