--- a/app/views/irm/wf_rules/_new_step_2.html.erb
+++ b/app/views/irm/wf_rules/_new_step_2.html.erb
@@ -1,101 +1,136 @@
-<div  class="wizard-block">
-    <div class="pbWizardTitle tertiaryPalette">
-        <div class="ptRightTitle">
-            <%= t(:step_n_total_m, :n => "2", :m => "2") %>
-        </div>
-        <h2>
-            <%= t(:step_n, :n => "2") %><%= t(:label_irm_wf_rule_config) %>
-        </h2>
-    </div>
-  <div class="pbBody">
-    <%= form_for(@wf_rule,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
+<%= form_for(@wf_rule,:url=>{:action=>"create"},:builder => CustomFormBuilder) do |f| %>
+
+
+  <% content_for :form_block_a   do%>
+    <%= f.hidden_field(:step) %>
+    <table class="form-table">
+      <tbody>
+          <tr>
+            <td class="label-col"><label for="wf_rule_bo_code"><%=t(:label_irm_wf_rule_bo_code)%></label></td>
+            <td class="data-col"><label><%=bo_name(@wf_rule.bo_code)%></label></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label for="wf_rule_name"><%=t(:label_irm_wf_rule_name)%></label></td>
+            <td class="data-col"><%=f.text_field :name, :required=>true ,:id=>"wf_rule_name"%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label for="wf_rule_code"><%=t(:label_irm_wf_rule_rule_code)%></label></td>
+            <td class="data-col"><%=f.text_field :rule_code, :required=>true,:irm_uppercase=>true ,:id=>"wf_rule_code"%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label for="wf_rule_description"><%=t(:label_irm_wf_rule_description)%></label></td>
+            <td class="data-col"><%=f.text_area :description,:id=>"wf_rule_description",:rows=>3%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+
+      </tbody>
+    </table>
+  <% end %>
+
+  <% content_for :form_block_b   do%>
+
+    <table class="form-table">
+      <tbody>
+        <%=f.hidden_field :evaluate_rule_mode, :value=>"FILTER"%>
+        <tr>
+          <td class="label-col"><label for="wf_rule_evaluate_criteria_rule"><%=t(:label_irm_wf_rule_evaluate_criteria_rule)%></label></td>
+          <td class="data-3col" colspan="3" style="width:82%">
+            <% available_evaluate_criteria_rules.each_with_index do |rule,index| %>
+              <div>
+                <%=f.radio_button :evaluate_criteria_rule, rule[1],{:id=>"evaluate_criteria_rule_#{index}"}%>
+                <label for="evaluate_criteria_rule_<%= index %>"> <%= rule[0] %> </label>
+              </div>
+            <% end %>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  <% end %>
+
+  <% content_for :form_block_c   do%>
+    <table class="form-table">
+      <tbody>
+        <%=f.hidden_field :evaluate_rule_mode, :value=>"FILTER"%>
+        <tr>
+          <td class="label-col"><label><%=t(:label_irm_wf_rule_filter)%></label></td>
+          <td class="data-3col" colspan="3" style="width:82%">
+            <% if @rule_filter %>
+
+              <%= render "rule_filter" %>
+            <% end %>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
+  <% end %>
+
+  <% content_for :form_buttons  do %>
+        <%= link_to t(:last), {:action => "new", :pre_step => true}, {:class => "submit btn"} %>
+        <%= link_submit t(:save),{:class=>"btn btn-primary"} %>
+        <%= link_to t(:cancel),nil,:class=>"btn" %>
+  <% end %>
+
+
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header"><tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= t(:step_n, :n => "2") %><%= t(:label_irm_wf_rule_config) %></h2>
+      </td>
+      <td class="page-block-button">
+        <%= content_for :form_buttons   %>
+
+      </td>
+      <td class="page-block-help">
+        <h2 class="block-title"><%= t(:step_n_total_m, :n => "2", :m => "2") %></h2>
+      </td>
+    </tr></table>
+    <div class="page-block-body">
       <%= error_for @wf_rule %>
       <%= error_for @rule_filter %>
-      <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-        <span class="pbSubExtra">
-          <span class="requiredLegend">
-            <span class="requiredExampleOuter">
-              <span class="requiredExample">&nbsp;</span>
-            </span><span class="requiredMark">*</span>
-            <span class="requiredText"> = <%=t(:label_is_required)%></span>
-          </span>
-        </span>
-        <h3><%= t(:label_common_info) %></h3>
+      <div class="sub-page-block">
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_a   %>
+        </div>
       </div>
-      <div class="pbSubsection">
-        <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-              <tr>
-                <td class="labelCol"><label for="wf_rule_bo_code"><%=t(:label_irm_wf_rule_bo_code)%></label></td>
-                <td class="dataCol"><%=bo_name(@wf_rule.bo_code)%></td>
-                <td class="labelCol empty">&nbsp;</td>
-                <td class="dataCol empty">&nbsp;</td>
-              </tr>
-              <tr>
-                <td class="labelCol"><label for="wf_rule_name"><%=t(:label_irm_wf_rule_name)%></label></td>
-                <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"wf_rule_name"%></td>
-                <td class="labelCol empty">&nbsp;</td>
-                <td class="dataCol empty">&nbsp;</td>
-              </tr>
-              <tr>
-                <td class="labelCol"><label for="wf_rule_code"><%=t(:label_irm_wf_rule_rule_code)%></label></td>
-                <td class="dataCol"><%=f.text_field :rule_code, :required=>true,:irm_uppercase=>true ,:id=>"wf_rule_code"%></td>
-                <td class="labelCol empty">&nbsp;</td>
-                <td class="dataCol empty">&nbsp;</td>
-              </tr>
-              <tr>
-                <td class="labelCol"><label for="wf_rule_description"><%=t(:label_irm_wf_rule_description)%></label></td>
-                <td class="dataCol"><%=f.text_area :description,:id=>"wf_rule_description",:rows=>3%></td>
-                <td class="labelCol empty">&nbsp;</td>
-                <td class="dataCol empty">&nbsp;</td>
-              </tr>
+      <div class="sub-page-block">
+        <div class="sub-page-block-header">
+          <h3 class="sub-page-block-title"><%= t(:label_irm_wf_rule_evaluation_criteria) %></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_b   %>
+        </div>
+      </div>
+      <div class="sub-page-block">
+        <div class="sub-page-block-header">
+          <h3 class="sub-page-block-title"><%= t(:label_irm_wf_rule_filter) %></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_c   %>
+        </div>
+      </div>
+    </div>
 
-          </tbody>
-        </table>
-      </div>
-      <div id="head_2_ep" class="pbSubheader tertiaryPalette">
-        <h3><%= t(:label_irm_wf_rule_evaluation_criteria) %></h3>
-      </div>
-      <div class="pbSubsection">
-        <%=f.hidden_field :evaluate_rule_mode, :value=>"FILTER"%>
-        <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="labelCol"><label for="wf_rule_evaluate_criteria_rule"><%=t(:label_irm_wf_rule_evaluate_criteria_rule)%></label></td>
-              <td class="dataCol" colspan="3" style="width:82%">
-                <% available_evaluate_criteria_rules.each_with_index do |rule,index| %>
-                  <div>
-                    <%=f.radio_button :evaluate_criteria_rule, rule[1],{:id=>"evaluate_criteria_rule_#{index}"}%>
-                    <label for="evaluate_criteria_rule_<%= index %>"> <%= rule[0] %> </label>
-                  </div>
-                <% end %>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div id="head_3_ep" class="pbSubheader tertiaryPalette">
-        <h3><%= t(:label_irm_wf_rule_filter) %></h3>
-      </div>
-      <% if @rule_filter %>
-        <%= render "rule_filter" %>
-      <% end %>
-      <div class="pbWizardFooter">
-          <div class="pbBottomButtons">
-              <table cellpadding="0" cellspacing="0" border="0">
-                <tbody>
-                  <tr>
-                    <td class="pbTitle"></td>
-                    <td id="bottomButtonRow" class="pbButtonb">
-                      <div class="button"><%= link_to t(:last), {:action => "new",:step=>1} %></div>
-                      <div class="button"><%= f.submit t :save %></div>
-                      <div class="button"><%= link_to t(:cancel), {:action => "index"} %></div>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-          </div>
-      </div>
-    <%end%>
+    <table class="page-block-footer"><tr>
+      <td class="page-block-title">
+      </td>
+      <td class="page-block-button">
+        <%= content_for :form_buttons   %>
+      </td>
+    </tr></table>
   </div>
-</div>
+
+<% end %>
