--- a/app/views/irm/wf_rules/add_exists_action.html.erb
+++ b/app/views/irm/wf_rules/add_exists_action.html.erb
@@ -1,61 +1,61 @@
-<style type="text/css">
-  div.actonType{
-      float:left;
-  }
-</style>
-<%= page_title %>
-<%= form_tag({:action=>"save_exists_action"}) do |f| %>
-<%= back_url_hidden_field_tag%>
-<%= hidden_params_field(:trigger_id)%>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= submit_tag t(:save)%></div>
-            <div class="button"><%= link_to t(:cancel),back_url_default({:action=>"show"})%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-               <td class="labelCol">
-                 <label for="duelType"><%=t(:label_irm_wf_rule_action_type)%></label>
-               </td>
-               <td class="dataCol" colspan="3">
-                 <%= render :partial => "irm/duel_select/tmpl",:locals => {:f=>f,:types=>available_action_type,:sources=>wf_rule_exists_actions(params[:id]),:str_value_field=>:selected_actions,:str_value=>wf_rule_belongs_actions(params[:id],params[:trigger_id]),:size=>10} %>
-               </td>
-            </tr>
 
-        </tbody>
-      </table>
-    </div>
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
+<%= common_title %>
+<%= form_tag({:action=>"save_exists_action"}) do |f| %>
+
+  <% content_for :form_block_a   do%>
+    <table class="form-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= submit_tag t(:save)%></div>
-            <div class="button"><%= link_to t(:cancel),back_url_default({:action=>"show"})%></div>
-          </td>
-        </tr>
+          <%= hidden_params_field(:trigger_id)%>
+          <tr>
+             <td class="label-col">
+               <label for="duelType"><%=t(:label_irm_wf_rule_action_type)%></label>
+             </td>
+             <td class="data-3col" colspan="3">
+               <%= render :partial => "irm/duel_select/tmpl",:locals => {:f=>f,:types=>available_action_type,:sources=>wf_rule_exists_actions(params[:id]),:str_value_field=>:selected_actions,:str_value=>wf_rule_belongs_actions(params[:id],params[:trigger_id]),:size=>10} %>
+             </td>
+          </tr>
       </tbody>
     </table>
-  </div>
-</div>
+  <% end %>
+
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_back t(:cancel),{},{:class=>"btn cancel"}%>
+  <% end %>
+
+
+
+    <!--页面结构-->
+    <div class="page-block">
+      <table class="page-block-header"><tr>
+        <td class="page-block-title">
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+
+        </td>
+      </tr></table>
+      <div class="page-block-body">
+        <%= error_for @application%>
+        <div class="sub-page-block">
+          <div class="sub-page-block-header">
+            <%= form_require_info %>
+            <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
+          </div>
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_a   %>
+          </div>
+        </div>
+
+      </div>
+
+      <table class="page-block-footer"><tr>
+        <td class="page-block-title">
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr></table>
+    </div>
+
 <% end %>
