--- a/app/views/irm/wf_rules/show.html.erb
+++ b/app/views/irm/wf_rules/show.html.erb
@@ -1,168 +1,111 @@
+<%= common_title %>
+<!--页面结构-->
+<div class="show-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= @wf_rule.name %></h2>
+    </td>
+    <td class="page-block-button">
+      <% if @wf_rule.enabled?  %>
+        <%= link_to t(:edit), {}, :href => "javascript:void(0);", :disabled => true,:class=>"btn"%>
+        <%= link_to t(:disable), {:action => "active",:id=>@wf_rule.id,:active=>Irm::Constant::SYS_NO},:class=>"btn"%>
+      <% else %>
+        <%= link_to t(:edit), {:action => "edit", :id => @wf_rule},:class=>"btn"%>
+        <%= link_to t(:active), {:action => "active",:id=>@wf_rule.id,:active=>Irm::Constant::SYS_YES},:class=>"btn"%>
+      <% end %>
+      <%= link_back t(:back),{:action=>"index"},:class=>"btn"%>
 
-<style type="text/css">
-  div.minBlock{
-    background-color: #DAE0E2;
-    border: 1px solid #999999;
-    padding: 10px;
-    border-radius: 4px 4px 4px 4px;
-    box-shadow: 1px 1px 2px #333333;
-    margin-top: 20px;
-  }
-  div.minBlockHeader{
-    border-bottom: 1px solid #999999;
-    border-width: 0 0 1px;
-    margin: -10px -10px 10px;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    background-color: #FFFFFF;
-    border-color: #D4DADC;
-    border-style: solid;
-    padding: 5px;
-
-  }
-  div.minBlockHeader .minTitle{
-    display: inline-block;
-    vertical-align: middle;
-    color: #333333;
-    font-weight: bold;
-    margin-left: 5px;
-  }
-  div.minBlockHeader img{
-      vertical-align: middle;
-  }
-  div.minBlockHeader .minLink{
-    vertical-align: middle;
-    margin-left: 25px;
-  }
-   div.minBlockHeader .minLink a{
-  }
-  div.minBlockBody{
-
-  }
-</style>
-<%= page_title %>
-
-<div id="ep" class="detail-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <table class="show-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= @wf_rule.name %></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <% if @wf_rule.enabled?  %>
-              <div class="button"><%= link_to t(:edit), {}, :href => "javascript:void(0);", :disabled => true%></div>
-              <div class="button"><%= link_to t(:disable), {:action => "active",:id=>@wf_rule.id,:active=>Irm::Constant::SYS_NO}%></div>
-            <% else %>
-              <div class="button"><%= link_to t(:edit), {:action => "edit", :id => @wf_rule}%></div>
-              <div class="button"><%= link_to t(:active), {:action => "active",:id=>@wf_rule.id,:active=>Irm::Constant::SYS_YES}%></div>
-            <% end %>
-            <div class="button"><%= link_to t(:cancel),back_url_default({:action=>"index"})%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label ><%=t(:label_irm_wf_rule_bo_code)%></label></td>
+            <td class="data-col"><div><%= @wf_rule[:bo_name] %></div></td>
+            <td class="label-col empty"><div>&nbsp;</div></td>
+            <td class="data-col empty"><div>&nbsp;</div></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label ><%=t(:label_irm_wf_rule_name)%></label></td>
+            <td class="data-col"><div><%= @wf_rule.name %></div></td>
+            <td class="label-col empty"><%=t(:label_irm_wf_rule_rule_code)%></td>
+            <td class="data-col empty"><div><%= @wf_rule.rule_code %></div></td>
+          </tr>
+
+          <tr>
+            <td class="label-col"><label ><%=t(:label_irm_wf_rule_active)%></label></td>
+            <td class="data-col"><div><%= check_img(@wf_rule.status_code) %></div></td>
+            <td class="label-col"><label ><%=t(:label_irm_wf_rule_evaluate_criteria_rule)%></label></td>
+            <td class="data-col"><div><%= @wf_rule[:evaluate_criteria_rule_name] %></div></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label ><%=t(:label_irm_wf_rule_description)%></label></td>
+            <td class="data-col" colspan="3" style="width:82%"><div><%= @wf_rule[:description] %></div></td>
+
+          </tr>
+          <tr>
+            <td class="label-col"><label ><%=t(:label_irm_wf_rule_filter)%></label></td>
+            <td class="data-col" colspan="3" style="width:82%"><div><%= @rule_filter.meaning %></div></td>
+          </tr>
+
       </tbody>
     </table>
   </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label ><%=t(:label_irm_wf_rule_bo_code)%></label></td>
-              <td class="dataCol"><div><%= @wf_rule[:bo_name] %></div></td>
-              <td class="labelCol empty"><div>&nbsp;</div></td>
-              <td class="dataCol empty"><div>&nbsp;</div></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label ><%=t(:label_irm_wf_rule_name)%></label></td>
-              <td class="dataCol"><div><%= @wf_rule.name %></div></td>
-              <td class="labelCol empty"><%=t(:label_irm_wf_rule_rule_code)%></td>
-              <td class="dataCol empty"><div><%= @wf_rule.rule_code %></div></td>
-            </tr>
-
-            <tr>
-              <td class="labelCol"><label ><%=t(:label_irm_wf_rule_active)%></label></td>
-              <td class="dataCol"><div><%= check_img(@wf_rule.status_code) %></div></td>
-              <td class="labelCol"><label ><%=t(:label_irm_wf_rule_evaluate_criteria_rule)%></label></td>
-              <td class="dataCol"><div><%= @wf_rule[:evaluate_criteria_rule_name] %></div></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label ><%=t(:label_irm_wf_rule_description)%></label></td>
-              <td class="dataCol" colspan="3" style="width:82%"><div><%= @wf_rule[:description] %></div></td>
-
-            </tr>
-            <tr>
-              <td class="labelCol"><label ><%=t(:label_irm_wf_rule_filter)%></label></td>
-              <td class="dataCol" colspan="3" style="width:82%"><div><%= @rule_filter.meaning %></div></td>
-            </tr>
-
-        </tbody>
-      </table>
-    </div>
-  </div>
 </div>
 
-
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_wf_rule_actions) %></h2></td>
-              <td class="pbButton">
-              </td>
-              <td class="pbHelp">
-              </td>
-            </tr>
-          </tbody>
-        </table>
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_irm_wf_rule_actions) %></h2>
+    </td>
+    <td class="page-block-button">
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <div class="sub-page-block">
+      <div class="sub-page-block-header">
+        <h3 class="sub-page-block-title"><%= t(:label_irm_wf_rule_immediate_actions) %></h3>
       </div>
-      <div class="pbBody">
-        <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-          <h3><%= t(:label_irm_wf_rule_immediate_actions) %></h3>
+      <div class="sub-page-block-body">
+        <div>
+          <%= render(:partial =>"immediate_actions",:locals => {:wf_rule => @wf_rule, :actions=>wf_rule_immediate_actions(@wf_rule.id)}) %>
         </div>
-        <div class="pbSubsection" style="padding: 0 12px;">
-          <div>
-            <%= render(:partial =>"immediate_actions",:locals => {:wf_rule => @wf_rule, :actions=>wf_rule_immediate_actions(@wf_rule.id)}) %>
-          </div>
-          <div>
-            <span id="createAction" class="menuButton">
-              <div  class="menuLabel">
-                <% unless @wf_rule.enabled?%>
-                    <span><a><%= t(:label_irm_wf_rule_add_actions)  %></a></span>
-
-                    <script type="text/javascript">
-                      $(function(){
-                          $("#createAction").menubutton();
-                      });
-                    </script>
-                <% else %>
-                    <span><a disabled=true><%= t(:label_irm_wf_rule_add_actions)  %></a></span>
-                <% end %>
-              </div>
-              <div class="menuContent" >
-                <div class="menuItem"><%= link_to(t(:label_irm_wf_mail_alert_new),{:controller => "irm/wf_mail_alerts",:action => "new",:source_str=>"WF_RULE,#{@wf_rule.id}",:back_url=>url_for({})}) %></div>
-                <div class="menuItem"><%= link_to(t(:label_irm_wf_field_update_new),{:controller => "irm/wf_field_updates",:action => "new",:source_str=>"WF_RULE,#{@wf_rule.id}",:back_url=>url_for({})}) %></div>
-                <div class="menuItem"><%= link_to(t(:label_action_add_exists_action),{:action => "add_exists_action",:back_url=>url_for({})}) %></div>
-              </div>
-            </span>
-          </div>
-        </div>
-        <div id="head_2_ep" class="pbSubheader  tertiaryPalette">
-          <h3><%= t(:label_irm_wf_rule_time_dependent_actions) %></h3>
-        </div>
-        <div class="pbSubsection" style="padding: 0 12px;">
-          <div>
-            <%= render(:partial =>"time_triggers",:locals => {:time_triggers=>wf_rule_time_triggers(@wf_rule.id)}) %>
-          </div>
-          <div style="display:inline-block;margin-top:10px;">
+        <div>
+          <div class="btn-group">
             <% unless @wf_rule.enabled?%>
-                <div class="button"><%= link_to t(:label_irm_wf_rule_add_time_trigger), {:controller=>"irm/wf_rule_time_triggers",:action => "new", :rule_id => @wf_rule.id}%></div>
+              <button data-toggle="dropdown" class="btn dropdown-toggle"><%= t(:label_irm_wf_rule_add_actions)  %><span class="caret"></span></button>
             <% else %>
-                <div class="button"><%= link_to t(:label_irm_wf_rule_add_time_trigger), {}, :disabled => true%></div>
+              <button data-toggle="dropdown" disabled="true" class="btn dropdown-toggle"><%= t(:label_irm_wf_rule_add_actions)  %><span class="caret"></span></button>
             <% end %>
+            <ul class="dropdown-menu">
+              <li><%= link_to(t(:label_irm_wf_mail_alert_new),{:controller => "irm/wf_mail_alerts",:action => "new",:source_str=>"WF_RULE,#{@wf_rule.id}",:back_url=>url_for({})}) %></li>
+              <li><%= link_to(t(:label_irm_wf_field_update_new),{:controller => "irm/wf_field_updates",:action => "new",:source_str=>"WF_RULE,#{@wf_rule.id}",:back_url=>url_for({})}) %></li>
+              <li><%= link_to(t(:label_action_add_exists_action),{:action => "add_exists_action",:back_url=>url_for({})}) %></li>
+            </ul>
           </div>
         </div>
       </div>
     </div>
+  </div>
+  <div class="page-block-body">
+    <div class="sub-page-block">
+      <div class="sub-page-block-header">
+        <h3 class="sub-page-block-title"><%= t(:label_irm_wf_rule_time_dependent_actions) %></h3>
+      </div>
+      <div class="sub-page-block-body">
+        <div>
+          <%= render(:partial =>"time_triggers",:locals => {:wf_rule=>@wf_rule,:time_triggers=>wf_rule_time_triggers(@wf_rule.id)}) %>
+        </div>
+
+        <div class="btn-group">
+          <% unless @wf_rule.enabled?%>
+              <%= link_to t(:label_irm_wf_rule_add_time_trigger), {:controller=>"irm/wf_rule_time_triggers",:action => "new", :rule_id => @wf_rule.id},:class=>"btn"%>
+          <% else %>
+              <%= link_to t(:label_irm_wf_rule_add_time_trigger), {}, :disabled => true,:class=>"btn"%>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
